# holo-code-gen

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .releaserc.json  AUTONOMOUS_ENHANCEMENT_COMPLETE.md  AUTONOMOUS_ENHANCEMENT_REPORT.md  AUTONOMOUS_EXECUTION_COMPLETE.md  AUTONOMOUS_EXECUTION_REPORT.md  AUTONOMOUS_SDLC_COMPLETE.md  BACKLOG.md  BREAKTHROUGH_RESEARCH_PUBLICATION.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  Makefile  PROJECT_CHARTER.md  README.md  SECURITY.md  autonomous_method_verification.py  breakthrough_algorithms_test_report.json  breakthrough_quantum_research.py  breakthrough_research_validation_report.json  docker-compose.yml  final_quality_gates_report.json  final_system_status.json  final_validation_report.json  generation1_implementation_report.json  generation2_robustness_report.json  generation3_scaling_report.json  next_generation_algorithms_report.json  production_readiness_report.json  pyproject.toml  quality_gates_report.json  requirements-dev.txt  test_basic_functionality.py  test_breakthrough_algorithms.py  (+22 more)
.devcontainer/: devcontainer.json  post-create.sh
.github/: project-metrics.json
.terragon/: config.yaml  discovery-engine.py  value-metrics.json
docs/: ARCHITECTURE.md  BENCHMARKS_AND_DATASETS.md  DEVELOPMENT.md  PERFORMANCE.md  RESEARCH_PUBLICATION.md  ROADMAP.md  SETUP_REQUIRED.md  TROUBLESHOOTING.md  index.md  installation.md
docs/adr/: 0001-template-based-photonic-design.md  README.md
docs/deployment/: README.md  build-system.md  docker-guide.md  release-process.md
docs/guides/: README.md
docs/monitoring/: README.md
docs/runbooks/: README.md  service-down.md
docs/workflows/: README.md
docs/workflows/examples/: cd.yml  ci.yml  dependency-update.yml  security-scan.yml
examples/: basic_example.py  complete_compilation_example.py  demo.py  neural_network_compilation.py  quantum_inspired_planning_example.py
holo_code_gen/: __init__.py  adaptive_systems.py  autonomous_enhancement.py  breakthrough_algorithms.py  breakthrough_qldpc_codes.py  circuit.py  cli.py  compiler.py  config.py  distributed_quantum_teleportation.py  exceptions.py  generator.py  global_deployment.py  ir.py  ml_optimization.py  monitoring.py  next_gen_algorithms.py  optimization.py  optimization_simple.py  performance.py  quantum_algorithms.py  quantum_ml_enhancement.py  quantum_performance.py  quantum_validation.py  repositories.py  security.py  spec.py  templates.py  validator.py
holo_code_gen/database/: __init__.py  cache.py  models.py  persistence.py
monitoring/: alerting-rules.yml  health-checks.yml  logging.yml  prometheus.yml
monitoring/grafana/dashboards/: holo-code-gen-overview.json
monitoring/grafana/datasources/: prometheus.yml
scripts/: automated_maintenance.py  collect_metrics.py  repository_health.py
security/configs/: bandit.yml
security/policies/: security-policy.yml
sentiment_analyzer/: __init__.py  analyzer.py
tests/: __init__.py  conftest.py  coverage.ini  pytest.ini  test_compiler.py  test_generator.py  test_spec.py  test_templates.py  test_validator.py
tests/docs/: testing_guide.md
tests/e2e/: test_full_compilation.py
tests/fixtures/: README.md
tests/fixtures/configs/: test_simulation.yaml
tests/fixtures/neural_networks/: simple_mlp.json
tests/integration/: test_compiler_integration.py
tests/performance/: test_benchmarks.py
tests/unit/: test_neural_network_parser.py  test_photonic_component.py  test_template_system.py
